# rzv_ai_apps

./: LICENSE  README.md
01_Head_count/: README.md
01_Head_count/exe/: head_count_app
01_Head_count/exe_v2h/: head_count_app
01_Head_count/exe_v2n/: head_count_app
01_Head_count/src/: CMakeLists.txt  MeraDrpRuntimeWrapper.cpp  MeraDrpRuntimeWrapper.h  define.h  head_count.cpp  wayland.cpp
02_Line_crossing_object_counting/: README.md
02_Line_crossing_object_counting/exe/: line_crossing_app
02_Line_crossing_object_counting/exe_v2h/: line_crossing_app
02_Line_crossing_object_counting/exe_v2n/: line_crossing_app
02_Line_crossing_object_counting/img/: Thumbs.db
02_Line_crossing_object_counting/src/: CMakeLists.txt  Line_crossing.cpp  box.h  define.h  make_exec.sh  wayland.cpp  wayland.h
03_Elderly_fall_detection/: README.md
03_Elderly_fall_detection/exe_v2h/: elderly_fall_detection_app
03_Elderly_fall_detection/exe_v2n/: elderly_fall_detection_app
03_Elderly_fall_detection/src/: CMakeLists.txt  define.h  elderly_fall_detection.cpp  wayland.h
04_Safety_helmet_vest_detection/: README.md
04_Safety_helmet_vest_detection/exe_v2h/: labels.txt  safety_helmet_vest_app
04_Safety_helmet_vest_detection/exe_v2n/: safety_helmet_vest_app
04_Safety_helmet_vest_detection/src/: CMakeLists.txt  define.h  helmet_vest.cpp
04_safety_helmet_vest_detection/: README.md
05_Age_gender_detection/: README.md
05_Age_gender_detection/exe_v2h/: age_gender_detection_app
05_Age_gender_detection/exe_v2n/: age_gender_detection_app
05_Age_gender_detection/src/: CMakeLists.txt  age_gender_detection.cpp  define.h  wayland.cpp
07_Animal_Detection/: README.md
07_Animal_Detection/exe/: animal_detection_app
07_Animal_Detection/src/: animal_detection.cpp  define.h
07_Animal_Detection/test_images/: image_dimensions.txt
07_Animal_detection/: README.md
07_Animal_detection/exe_v2h/: animal_detection_app
07_Animal_detection/exe_v2n/: animal_detection_app
07_Animal_detection/img/: Thumbs.db
07_Animal_detection/src/: CMakeLists.txt  animal_detection.cpp  define.h  wayland.h
09_Human_gaze_detection/: README.md
09_Human_gaze_detection/exe/: human_gaze_detection_app
09_Human_gaze_detection/exe_v2h/: human_gaze_detection_app
09_Human_gaze_detection/exe_v2n/: human_gaze_detection_app
09_Human_gaze_detection/src/: CMakeLists.txt  MeraDrpRuntimeWrapper.cpp  define.h  human_gaze_detection.cpp
10_Driver_monitoring_system/: README.md
10_Driver_monitoring_system/exe_v2h/: dms_detection_app  driver_monitoring_system_app
10_Driver_monitoring_system/exe_v2n/: dms_detection_app  driver_monitoring_system_app
11_Head_count_topview/: README.md
11_Head_count_topview/img/: Thumbs.db
12_Hand_gesture_recognition_v2/: README .md  README.md
13_Car_ahead_departure_detection/: README.md
14_Multi_Camera_Vehicle_Detection/: README.md
14_Multi_camera_vehicle_detection/: README.md
15_Road_lane_segmentation/: README.md
exe_v2h/: hand_gesture_recognition_v2_app
src/: MeraDrpRuntimeWrapper.cpp  define.h
(+90 files in other folders)
